# python-data-project-week3

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  rate_limits.txt
backend/src/: find_skill_gaps.py  main.py  prompt_model.py
frontend/: Dockerfile  pyproject.toml
frontend/src/: main.py
frontend/src/templates/: chat_page.html
